tests/security/taintThroughChildConstructorCallingGrandParentMethod/output.txt
ERROR: TaintedData - input.hack:18:10 - Data from a URL query string found its way to an HTML tag